--- a/cloud/_posts/2011-08-25-juju-nfs.markdown
+++ b/cloud/_posts/2011-08-25-juju-nfs.markdown
@@ -1,47 +1,48 @@
 ---
 layout: post
-title: "Core Infrastructure Part 1 - Adding NFS to Ensemble Formulas"
-tags: ['cloud', 'ensemble']
+title: "Core Infrastructure Part 1 - Adding NFS to juju charms"
+tags: ['cloud', 'juju']
 ---
 
-Several features have recently landed in Ensemble that make 
+Several features have recently landed in juju that make 
 it easier to convert some common infrastructure-level components 
 over and use them within your stack of services.
 I figured it's worth a series of posts about core services,
 storage, logging, monitoring, messaging, etc...  and how they
-fit into the ensemble ecosystem.
+fit into the juju ecosystem.
 
 We'll start with NFS.  I'd consider that vanilla workhorse to be
 core infrastructure technology... it's still pretty much everywhere you
 look.  Many friends keep ancient boxes around as dedicated NFS 
 fileserver appliances that are usually in fairly critical roles.
-Well, how would this fit into a sexy new ensemble of services?
+Well, how would this fit into a sexy new juju stack of services?
 
 
 ## The Goal
 
 In this post I'll walk through adapting a basic mediawiki
-formula to enable using nfs mounts for shared resource directories.
+charm to enable using nfs mounts for shared resource directories.
 The steps here should work pretty closely for a lot of different
-service formulas that might benefit from a NFS hooks.
+service charms that might benefit from a NFS hooks.
 
 
 At the end of the day, an example stack might look something like 
 
-    $ ensemble bootstrap
-    $ ensemble deploy --repository=~/formulas nfs myimages
-    $ ensemble deploy --repository=~/formulas mysql
-    $ ensemble deploy --repository=~/formulas mediawiki mywiki
-    $ ensemble add-relation mysql:db mywiki:db
-    $ ensemble add-relation myimages mywiki
+    $ juju bootstrap
+    $ juju deploy --repository=~/charms local:nfs myimages
+    $ juju deploy --repository=~/charms local:mysql
+    $ juju deploy --repository=~/charms local:mediawiki mywiki
+    $ juju add-relation mysql:db mywiki:db
+    $ juju add-relation myimages mywiki
+    $ juju expose mywiki
 
 which will result in a mediawiki setup with `images`
 stored on an nfs server.
 
 As expected,
 
-    $ ensemble add-unit mywiki
-    $ ensemble add-unit mywiki
+    $ juju add-unit mywiki
+    $ juju add-unit mywiki
 
 will scale mediawiki instances.
 
@@ -52,20 +53,20 @@ resource directory on the nfs server.  This works
 months into the deployment... we add another unit
 and the relation hooks perform the mount.
 
-The nfs server formula is pretty canned, it'll take 
+The nfs server charm is pretty canned, it'll take 
 config options, but has sane defaults.  There's 
 little need to adjust anything in there.
 
-To adapt your formula to use an ensemble-managed
+To adapt your charm to use a juju-managed
 NFS service, we copy two hooks from an nfs-client
-example formula and adapt to suit the needs of
-the formula we're working on (mediawiki in this
+example charm and adapt to suit the needs of
+the charm we're working on (mediawiki in this
 example).
 
 
 ## Detailed walk-through
 
-Let's go through this process of adapting our formulas
+Let's go through this process of adapting our charms
 to use NFS mounts.
 
 
@@ -73,16 +74,17 @@ to use NFS mounts.
 
 Start with a simple mediawiki deploy,
 
-    $ ensemble bootstrap
-    $ ensemble deploy --repository=~/formulas mysql
-    $ ensemble deploy --repository=~/formulas mediawiki mywiki
-    $ ensemble add-relation mysql:db mywiki:db
+    $ juju bootstrap
+    $ juju deploy --repository=~/charms local:mysql
+    $ juju deploy --repository=~/charms local:mediawiki mywiki
+    $ juju add-relation mysql:db mywiki:db
+    $ juju expose mywiki
 
-With ensemble, it's easy to spin up multiple mediawiki
-instances (or "service units" in ensemble-speak).
+With juju, it's easy to spin up multiple mediawiki
+instances (or "service units" in juju-speak).
 
-    $ ensemble add-unit mywiki
-    $ ensemble add-unit mywiki
+    $ juju add-unit mywiki
+    $ juju add-unit mywiki
 
 Now, since the `mywiki` service is related to the `mysql` service,
 then all these mywiki units share the same database and hence
@@ -107,7 +109,7 @@ for shared storage.
 
 Ubuntu packages for mediawiki install mediawiki's resource
 directories with respect to `/var/lib/mediawiki/`.
-So let's just set adapt the basic mediawiki formula to use
+So let's just set adapt the basic mediawiki charm to use
 an nfs share for `/var/lib/mediawiki/images`.
 
 Each mediawiki
@@ -120,16 +122,16 @@ same `images` directory.
 
 Let's grab some code and get cranking...
 
-First, pull mediawiki as an example (or any formula you're
+First, pull mediawiki as an example (or any charm you're
 currently working on that might need shared storage)
 
-    $ mkdir ~/formulas
-    $ cd ~/formulas
-    $ bzr branch lp:~mark-mims/+junk/ensemble-mediawiki-nfsdemo mediawiki
+    $ mkdir ~/charms
+    $ cd ~/charms
+    $ bzr branch lp:~mark-mims/+junk/juju-mediawiki-nfsdemo mediawiki
 
 This gives us
 
-    /home/mmm/formulas/mediawiki
+    /home/mmm/charms/mediawiki
     |-- copyright
     |-- hooks
     |   |-- ...
@@ -140,12 +142,13 @@ This gives us
     |   |-- website-relation-changed
     |   |-- website-relation-joined
     |   `-- ...
-    `-- metadata.yaml
+    |-- metadata.yaml
+    `-- revision
 
-a bare mediawiki formula that we can use as a starting
+a bare mediawiki charm that we can use as a starting
 point to add our nfs client hooks.
-Note this is an 'nfsdemo' branch just for this demo... the real
-mediawiki formula should now have nfs support in the trunk.
+Note that even though this is an 'nfsdemo' branch just for this demo, 
+the real mediawiki charm should now have nfs support in the trunk.
 
 Now, we can copy sample nfs client hooks from
 
@@ -153,12 +156,12 @@ Now, we can copy sample nfs client hooks from
 
 Grab `storage-relation-joined` and `storage-relation-changed`, 
 and save them as mediawiki hooks... I'd rename them to something
-that makes sense to future readers of our mediawiki formula.
+that makes sense to future readers of our mediawiki charm.
 Let's call them `nfs-imagestore-relation-joined` and 
 `nfs-imagestore-relation-changed`.
 
 
-### Adapt the example code to our formula
+### Adapt the example code to our charm
 
 Let's look at the
 `nfs-imagestore-relation-joined` hook:
@@ -188,7 +191,7 @@ Next, what about the `nfs-imagestore-relation-changed` hook?
 
     remote_host=`relation-get hostname`
     if [ -z "$remote_host" ] ; then
-        ensemble-log "remote host not set yet."
+        juju-log "remote host not set yet."
         exit 0
     fi
     export_path=`relation-get mountpoint`
@@ -199,7 +202,7 @@ Next, what about the `nfs-imagestore-relation-changed` hook?
     mount_options=""
 
     create_local_mountpoint() {
-      ensemble-log "creating local mountpoint"
+      juju-log "creating local mountpoint"
       umask 002
       mkdir -p $local_mountpoint
       # create owner if necessary?
@@ -213,12 +216,12 @@ Next, what about the `nfs-imagestore-relation-changed` hook?
     mount_share() {
       for try in {1..3}; do
 
-        ensemble-log "mounting nfs share"
+        juju-log "mounting nfs share"
         [ ! -z $mount_options ] && options="-o ${mount_options}" || options=""
         mount -t $fstype $options $remote_host:$export_path $local_mountpoint \
           && break
 
-        ensemble-log "mount failed: $local_mountpoint"
+        juju-log "mount failed: $local_mountpoint"
         sleep 10
 
       done
@@ -228,12 +231,12 @@ Next, what about the `nfs-imagestore-relation-changed` hook?
     # ownership
     chown -f $local_owner.$local_owner $local_mountpoint
 
-Ok, when parameters used within formula hooks are likely to change
+Ok, when parameters used within charm hooks are likely to change
 from one service deployment to the next, they can be externalized
-into a `config.yaml` for the formula.  This also allows you to
+into a `config.yaml` for the charm.  This also allows you to
 pass them in at deploy-time or change them throughout the lifetime
-of the service using ensemble cli `--config` options and `set`
-commands.  See the [docs](http://ensemble.ubuntu.com/docs/) for
+of the service using juju cli `--config` options and `set`
+commands.  See the [juju docs](http://juju.ubuntu.com/docs/) for
 how to do all of this.
 
 There are two parameters in the `nfs-imagestore-relation-changed`
@@ -251,10 +254,10 @@ to just hard-code them here as:
     local_owner="www-data"
 
 We could certainly just add these parameters to a `config.yaml`
-for the mediawiki formula, but in this case, they're not really
-interesting "tweakable" aspects of the mediawiki formula, so let's
+for the mediawiki charm, but in this case, they're not really
+interesting "tweakable" aspects of the mediawiki charm, so let's
 keep the mediawiki config simple.
-For other formulas this might not be the case,
+For other charms this might not be the case,
 but make that call in context.
 
 Now, at this point, our version of the `nfs-imagestore-relation-changed`
@@ -265,7 +268,7 @@ hook:
 
     remote_host=`relation-get hostname`
     if [ -z "$remote_host" ] ; then
-        ensemble-log "remote host not set yet."
+        juju-log "remote host not set yet."
         exit 0
     fi
     export_path=`relation-get mountpoint`
@@ -277,7 +280,7 @@ hook:
     mount_options=""
 
     create_local_mountpoint() {
-      ensemble-log "creating local mountpoint"
+      juju-log "creating local mountpoint"
       umask 002
       mkdir -p $local_mountpoint
       # create owner if necessary?
@@ -291,12 +294,12 @@ hook:
     mount_share() {
       for try in {1..3}; do
 
-        ensemble-log "mounting nfs share"
+        juju-log "mounting nfs share"
         [ ! -z $mount_options ] && options="-o ${mount_options}" || options=""
         mount -t $fstype $options $remote_host:$export_path $local_mountpoint \
           && break
 
-        ensemble-log "mount failed: $local_mountpoint"
+        juju-log "mount failed: $local_mountpoint"
         sleep 10
 
       done
@@ -313,7 +316,7 @@ will run normally.
 
 ### Additional configuration
 
-This next step depends greatly on your particular formula/service.
+This next step depends greatly on your particular charm/service.
 With mediawiki, the `images` directory isn't really used until
 you tell mediawiki to turn on uploads.  This is true regardless
 of whether `images` is an nfs mount or you're just using the
@@ -324,7 +327,7 @@ so putting it in the `nfs-imagestore-relation-changed` hook after
 the mount is a good place for it.
 
     
-    ensemble-log "updating mediawiki upload config"
+    juju-log "updating mediawiki upload config"
  
     cat > /etc/mediawiki/upload_settings.php <<'EOS'
     $wgEnableUploads = true;
@@ -339,7 +342,7 @@ So we end up with
 
     remote_host=`relation-get hostname`
     if [ -z "$remote_host" ] ; then
-        ensemble-log "remote host not set yet."
+        juju-log "remote host not set yet."
         exit 0
     fi
     export_path=`relation-get mountpoint`
@@ -351,7 +354,7 @@ So we end up with
     mount_options=""
 
     create_local_mountpoint() {
-      ensemble-log "creating local mountpoint"
+      juju-log "creating local mountpoint"
       umask 002
       mkdir -p $local_mountpoint
       # create owner if necessary?
@@ -365,12 +368,12 @@ So we end up with
     mount_share() {
       for try in {1..3}; do
 
-        ensemble-log "mounting nfs share"
+        juju-log "mounting nfs share"
         [ ! -z $mount_options ] && options="-o ${mount_options}" || options=""
         mount -t $fstype $options $remote_host:$export_path $local_mountpoint \
           && break
 
-        ensemble-log "mount failed: $local_mountpoint"
+        juju-log "mount failed: $local_mountpoint"
         sleep 10
 
       done
@@ -380,7 +383,7 @@ So we end up with
     # insure ownership
     chown -f $local_owner.$local_owner $local_mountpoint
 
-    ensemble-log "updating mediawiki upload config"
+    juju-log "updating mediawiki upload config"
  
     cat > /etc/mediawiki/upload_settings.php <<'EOS'
     $wgEnableUploads = true;
@@ -389,14 +392,14 @@ So we end up with
     service apache2 status && service apache2 restart
 
 
-the same hook that's in `lp:~mark-mims/+junk/ensemble-mediawiki-nfs-imagestore`.
+the same hook that's in `lp:~mark-mims/+junk/juju-mediawiki-nfs-imagestore`.
 
 
-### Update formula metadata
+### Update charm metadata
 
 So we have hooks that should do what we'd like... 
 (I'll developing and debugging hooks in another post).
-Next we need to update the formula metadata so ensemble
+Next we need to update the charm metadata so juju
 knows when to fire them.
 
 My `mediawiki/metadata.yaml` currently looks like
@@ -433,7 +436,7 @@ all optional),
     ...
 
 The relation name's gotta match up with what we called the hooks.
-I got the interface name from the nfs server formula's metadata:
+I got the interface name from the nfs server charm's metadata:
 
     ...
     provides:
@@ -441,7 +444,7 @@ I got the interface name from the nfs server formula's metadata:
         interface: mount
     ...
 
-which provides the [mount interface](http://ensemble.ubuntu.com/Interfaces/mount).
+which provides the [mount interface](http://juju.ubuntu.com/Interfaces/mount).
 
 We can use the interface as a sanity check to insure we're providing
 and using the right parameters when communicating with the nfs server
@@ -450,22 +453,22 @@ service (using `relation-get` and `relation-set`) in our hooks.
 
 ### Spin it up
 
-Let's deploy our new formula:
+Let's deploy our new charm:
 
-    $ ensemble bootstrap
-    $ ensemble deploy --repository=~/formulas nfs myimages
-    $ ensemble deploy --repository=~/formulas mysql
-    $ ensemble deploy --repository=~/formulas mediawiki mywiki
-    $ ensemble add-relation mysql:db mywiki:db
-    $ ensemble add-relation myimages mywiki
-    $ ensemble expose mywiki
+    $ juju bootstrap
+    $ juju deploy --repository=~/charms local:nfs myimages
+    $ juju deploy --repository=~/charms local:mysql
+    $ juju deploy --repository=~/charms local:mediawiki mywiki
+    $ juju add-relation mysql:db mywiki:db
+    $ juju add-relation myimages mywiki
+    $ juju expose mywiki
 
 ### Spread it out
 
 Add a few more mediawiki instances...
 
     $ for i in {1..10}; do
-    $ ensemble add-unit mywiki
+    $ juju add-unit mywiki
     $ done
 
 When everything's up, these should all share the same database
@@ -480,13 +483,13 @@ Keep an eye out for subsequent posts in this series.
 ### NFS server config
 
 Up until now we've only talked about the NFS client.
-The NFS *server* formula is pretty simple.
+The NFS *server* charm is pretty simple.
 
 It lives at
-[lp:principia/nfs](http://bazaar.launchpad.net/~ensemble-composers/principia/oneiric/nfs/trunk/files)
+[lp:principia/nfs](http://bazaar.launchpad.net/~juju-composers/principia/oneiric/nfs/trunk/files)
 and supports configuration options at deploy(or run)-time via
 
-    $ ensemble deploy --repository . --config ./mydata.yaml nfs mydata
+    $ juju deploy --repository . --config ./mydata.yaml local:nfs mydata
 
 where `mydata.yaml` looks like
 
@@ -517,7 +520,12 @@ the `job27` units sharing a new nfs export.
 
 This behavior is a reasonable default, but there may be a need to do this a 
 little differently in your infrastructure.  You could change the nfs server
-formula to provide different levels of export sharing... either by some
+charm to provide different levels of export sharing... either by some
 additional `config.yaml` entries or by extending the `mount` interface.
 An nfs client might request a unique export, for backups
 say, or a named export for sharing.
+
+
+### Disclaimer
+
+I work on the Ubuntu juju project for Canonical.
